# Messenger-project

./: .clang-format  BD-CMakeLists.txt  CMakeLists.txt  DataBaseInterface.cpp  Dialog.cpp  LICENSE  Message.cpp  Mock_DataBaseInterface.cpp  README.md  SQL_DataBaseInterface.cpp  ServerDataBase.db  TODO  User.cpp  cryptographer.hpp  dataBaseInterface.hpp  dialog.cpp  dialog.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.hpp  netClient.hpp  netGeneral.hpp  netServer.hpp  netTest-1.cpp  netTest-2.cpp  register.cpp  register.h  register.ui  status.hpp  user.cpp  userUI.cpp  userUI.h  welcWindow.cpp  welcWindow.h  welcWindow.ui
archive/: NetGeneral-BU.hpp  NetServer-BU-24.05.2023.hpp
bd/: ServerDataBase-1.db  ServerDataBase-BU-2023.05.08.db  ServerDataBase.db
include/: Chat.cpp  Chat.hpp  Cryptographer.hpp  DataBaseInterface.hpp  Dialog.hpp  FileWorker.hpp  Group.hpp  Message.hpp  Messenge.hpp  Status.hpp  TextWorker.hpp  User.hpp
include/Net/: NetClient.hpp  NetGeneral.hpp  NetServer.hpp
include/database/: DataBaseInterface.hpp  Dialog.hpp  Message.hpp  README.md  Status.hpp  User.hpp
include/interface/: addGroup.h  bubble.h  chatInfo.h  chatSetting.h  clientinfo.h  mainwindow.h  mesSetting.h  popUp.h  register.h  sureDo.h  welcWindow.h
src/: DataBaseInterface.cpp  Dialog.cpp  Message.cpp  Mock_DataBaseInterface.cpp  README.md  RunServer.cpp  SQL_DataBaseInterface.cpp  User.cpp  main.cpp
src/bd-files/: Dialog.cpp  Message.cpp  Mock_DataBaseInterface.cpp  SQL_DataBaseInterface.cpp  User.cpp  main.cpp
src/database/: BD-main.cpp  Dialog.cpp  Message.cpp  Mock_DataBaseInterface.cpp  SQL_DataBaseInterface.cpp  User.cpp
src/general/: TextWorker.hpp
src/general/CryptoTest/: Botan-Test-1-BU.cpp  Botan-Test-1.cpp  Botan-Test-2.cpp  Cryptographer.hpp  README.MD
src/general/NetTest/: FileTest.cpp  NetClient.hpp  NetGeneral-BU.hpp  NetGeneral-Refactored.hpp  NetGeneral.hpp  NetServer.hpp  NetTest-1.cpp  NetTest-2.cpp  NetTest-3.cpp  NetTest-request-refactoring.cpp  README.MD  run-server-test.py
src/interface/: SureDo.ui  addGroup.cpp  addGroup.ui  bubble.cpp  bubble.ui  chatInfo.cpp  chatInfo.ui  chatSetting.cpp  chatSetting.ui  main.cpp  mainwindow.cpp  mainwindow.ui  mesSetting.cpp  mesSetting.ui  poUp.cpp  popUp.cpp  popUp.ui  register.cpp  register.ui  sureDo.cpp  welcWindow.cpp  welcWindow.ui
src/server/database/: BD-main.cpp  DB-Test.cpp  DB-main.cpp  Dialog.cpp  Message.cpp  Mock_DataBaseInterface.cpp  SQL_DataBaseInterface.cpp  User.cpp  main.cpp
tests/: README.md  run_all_test.bash  run_test_data-Examples.bash  run_test_data.bash  test-example-1.hpp  test-example-2.hpp
tests/NetTest/: FileTest.cpp  JSON-Test-01.cpp  README.MD
tests/server/: run_test_data-Cryptographer.bash  run_test_data-FileWorker.bash  test-Cryptograhper.hpp  test-FileWorker.hpp
